--- a/src/components/PowerCollapesible/index.module.scss
+++ b/src/components/PowerCollapesible/index.module.scss
@@ -137,3 +137,80 @@
     }
   }
 }
+
+@media (max-width: 1280px) {
+  .wrapper {
+    width: 250px;
+    padding: 6px 10px;
+
+    .header {
+      p {
+        font-size: 24px;
+
+        span {
+          font-size: 24px;
+          margin: 0 3px;
+        }
+      }
+
+      .arrow {
+        border-width: 0px 3px 3px 0px;
+        width: 12px;
+        height: 12px;
+        right: 15px;
+        bottom: 16px;
+
+        &.up {
+          bottom: 10px;
+        }
+      }
+    }
+
+    .body {
+      margin: 5px 0;
+
+      svg {
+        margin: 0;
+        padding: 0;
+        width: 45px;
+        height: 45px;
+      }
+
+      .body_card {
+        width: 105px;
+        margin: 20px 0;
+        font-size: 14px;
+
+        span {
+          min-width: 40px;
+          height: 20px;
+          line-height: 23px;
+          font-size: 14px;
+          font-weight: 600;
+        }
+
+        p {
+          margin: 4px 0 0 0;
+          padding: 0;
+        }
+      }
+
+      button {
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        margin: 10px auto;
+        line-height: 10px;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        color: $lightBlue;
+        border-bottom: 1px solid $lightBlue;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
