--- a/src/components/SportsSelectionCard3/index.module.scss
+++ b/src/components/SportsSelectionCard3/index.module.scss
@@ -1426,3 +1426,189 @@
     }
   }
 }
+
+@media (max-width: 1200px) {
+  .container_body_card {
+    padding: 14px 12px;
+    width: 373px !important;
+    height: 182px !important;
+
+    .container_body_card_header {
+      .container_selected_p {
+        font-size: var(--font-size-14);
+
+        span {
+          font-size: var(--font-size-14);
+        }
+      }
+
+      .injured {
+        transform: translate(-10px, 0);
+
+        svg {
+          width: 16px;
+          height: 16px;
+        }
+
+        span {
+          font-size: var(--font-size-12);
+        }
+      }
+
+      button {
+        font-size: var(--font-size-10);
+        font-weight: 500;
+        width: 74px;
+        height: 24px;
+      }
+
+      .container_selected {
+        .container_selected_p_1 {
+          font-size: var(--font-size-12);
+
+          img {
+            width: 20px;
+            height: 20px;
+            margin-left: 5px;
+          }
+
+          svg {
+            margin-right: 3px;
+            width: 14px;
+            height: 14px;
+          }
+        }
+      }
+    }
+
+    p {
+      font-size: var(--font-size-14);
+      margin-top: 15px;
+
+      span {
+        font-weight: 600;
+        font-size: var(--font-size-20);
+      }
+
+      .teamA {
+        font-size: var(--font-size-14);
+      }
+
+      .teamB {
+        font-size: var(--font-size-14);
+      }
+    }
+
+    .card_state_main_container {
+      .card_state_left {
+        padding-top: 24px;
+        font-size: var(--font-size-12);
+
+        strong {
+          margin: 5.5px 0;
+        }
+      }
+
+      img {
+        width: 93%;
+        height: 66px;
+        margin: 25px auto;
+      }
+
+      .container_body_card_state {
+        margin: 8px 0 0 0;
+
+        .card_state {
+          .card_state_title {
+            span {
+              font-size: var(--font-size-10);
+              width: 45px;
+            }
+
+            .state_step_1_title {
+              font-size: var(--font-size-12);
+              opacity: 1;
+              width: 35px;
+            }
+          }
+
+          .card_state_values {
+            &.column {
+              flex-direction: column;
+              width: 230px !important;
+            }
+
+            .step_value_1 {
+              strong {
+                text-align: center;
+                width: 100%;
+              }
+            }
+
+            .step_value {
+              width: 45px;
+
+              &.margin_4 {
+                margin: 6px 0;
+              }
+
+              .state_step_1_value {
+                font-size: var(--font-size-12);
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .container_card_footer_main {
+      .card_footer_left {
+        .container_body_footer {
+          padding: 0;
+          margin: 0;
+
+          span {
+            font-size: var(--font-size-12);
+
+            svg {
+              margin-right: 5px;
+              width: 14px;
+              height: 14px;
+            }
+          }
+        }
+      }
+
+      .card_footer_right {
+        bottom: 15px;
+        right: 12px;
+
+        svg {
+          width: 14px;
+          height: 14px;
+        }
+      }
+    }
+    .divider {
+      margin: 15px auto;
+    }
+
+    .container_body_card_start_power {
+      width: 120px;
+      height: 15px;
+      line-height: 15px;
+
+      p {
+        font-size: var(--font-size-12);
+      }
+
+      svg {
+        padding: 0;
+        margin: 0;
+        margin-right: 2px;
+        width: 12px;
+        height: 12px;
+      }
+    }
+  }
+}
