--- a/src/components/Footer/index.module.scss
+++ b/src/components/Footer/index.module.scss
@@ -23,6 +23,9 @@
     margin: 1.6428rem 0 2.8571rem 0;
     a{
         font-weight: 600;
+        &:hover{
+            color: $primary;
+        }
     }
 }
 .copyWriteSection{
