--- a/src/components/NHLLiveSportsHeader/index.module.scss
+++ b/src/components/NHLLiveSportsHeader/index.module.scss
@@ -1,115 +1,329 @@
 @import "../../scss/colors.scss";
 
+@mixin button_back {
+  display: flex;
+  align-items: center;
+  min-width: 220px;
+  justify-content: space-evenly;
+  transform: translate(-10px, 0);
+  padding-left: 0;
+  border: none;
+  outline: none;
+  color: $white;
+  font-family: Poppins;
+  font-size: 14px;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:active {
+    opacity: 0.9;
+    color: $primary;
+  }
+}
+
+%button_back {
+  @include button_back();
+}
 
 .container_header {
+  display: flex;
+  flex: 0.88;
+  flex-direction: column !important;
+  margin: 20px 0;
+
+  .bg_transparent {
+    background-color: transparent;
+    width: 220px;
+  }
+
+  .button_back {
+    @include button_back();
+  }
+
+  .container_nav {
+    display: flex;
+    flex-direction: row;
+    margin: 22px 0;
+
+    ul {
+      display: flex;
+      width: 100%;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      font-size: 20px;
+
+      li {
+        // padding: 20px;
+        margin: 0 20px;
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+        a {
+          padding: 20px 0;
+          font-weight: normal;
+
+          &.active {
+            border-bottom: 1px solid $primary;
+            font-weight: 600;
+            color: $primary;
+          }
+        }
+      }
+    }
+
+    .right_menu {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 390px;
+      background-color: $lightBlack5;
+      border-radius: 12px;
+      height: 38px;
+      opacity: 0.8;
+      padding: 0 !important;
+      margin: 0;
+
+      .button {
+        background-color: transparent;
+        border: none;
+        outline: none;
+        padding: 7px 15px;
+        color: $white;
+        border-radius: 12px;
+        font-size: 14px;
+
+        &:hover {
+          cursor: pointer;
+          color: $primary;
+        }
+
+        &.active {
+          background-color: $lightBlue;
+          pointer-events: none;
+        }
+      }
+    }
+    .btn_single {
+      @include button_back();
+
+      min-width: 160px;
+      background-color: $lightBlack5;
+      border-radius: 8px;
+      padding: 8px 0;
+    }
+  }
+}
+
+@media (max-width: 1900px) {
+  .container_header {
     display: flex;
     flex: 0.88;
     flex-direction: column !important;
     margin: 20px 0;
 
     .bg_transparent {
-        background-color: transparent;
-        width: 220px
+      background-color: transparent;
+      width: 220px;
     }
 
     .button_back {
-        display: flex;
-        align-items: center;
-        min-width: 220px;
-        justify-content: space-evenly;
-        transform: translate(-10px, 0);
-        padding-left: 0;
-        border: none;
-        outline: none;
-        color: $white;
-        font-family: Poppins;
-        font-size: 14px;
+      @include button_back();
 
-        &:hover {
-            cursor: pointer;
-        }
-
-        &:active {
-            opacity: 0.9;
-            color: $primary;
-        }
+      font-size: 18px;
+      min-width: 280px;
     }
 
     .container_nav {
-        display: flex;
-        flex-direction: row;
-        margin: 22px 0;
-        
-        ul {
-            display: flex;
-            width: 100%;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            font-size: 20px;
-            
-            li {
-                // padding: 20px;
-                margin: 0 20px;
+      margin: 22px 0;
 
-                &:first-child {
-                    margin-left: 0;
-                }
-                
-                a {
-                    padding: 20px 0;
-                    font-weight: normal;
-                    
-                    &.active {
-                        border-bottom: 1px solid $primary;
-                        font-weight: 600;
-                        color: $primary;
-                    }
-                }
-            }
+      ul {
+        font-size: 26px;
+
+        li {
+          &:first-child {
+            margin-left: 0;
+          }
+
+          a {
+            padding: 20px 0;
+          }
         }
+      }
 
-        .right_menu {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 390px;
-            background-color: $lightBlack5;
-            border-radius: 12px;
-            height: 38px;
-            opacity: 0.8;
-            padding: 0 !important;
-            margin: 0;
-            
-            .button {
-                background-color: transparent;
-                border: none;
-                outline: none;
-                padding: 7px 15px;
-                color: $white;
-                border-radius: 12px;
-                font-size: 14px;
+      .right_menu {
+        width: 490px;
+        height: 48px;
 
-                &:hover {
-                    cursor: pointer;
-                    color: $primary;
-                }
-
-                &.active {
-                    background-color: $lightBlue;
-                    pointer-events: none;
-                }
-            }
-
+        .button {
+          height: 48px;
+          font-size: 18px;
         }
-        .btn_single {
-            @extend .button_back;
+      }
+      .btn_single {
+        @include button_back();
 
-            min-width: 160px;
-            background-color: $lightBlack5;
-            border-radius: 8px;
-            padding: 8px 0;
-        }
-
+        min-width: 160px;
+        padding: 8px 0;
+      }
     }
+  }
+}
+
+@media (max-width: 1680px) {
+  .container_header {
+    flex: 0.88;
+    margin: 20px 0;
+
+    .bg_transparent {
+      width: 200px;
+    }
+
+    .button_back {
+      @include button_back();
+
+      font-size: 16px;
+      min-width: 280px;
+    }
+
+    .container_nav {
+      margin: 22px 0;
+
+      ul {
+        font-size: 24px;
+
+        li {
+          &:first-child {
+            margin-left: 0;
+          }
+
+          a {
+            padding: 20px 0;
+          }
+        }
+      }
+
+      .right_menu {
+        width: 470px;
+        height: 44px;
+
+        .button {
+          height: 100%;
+          font-size: 16px;
+        }
+      }
+      .btn_single {
+        @include button_back();
+
+        min-width: 160px;
+        padding: 8px 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 1440px) {
+  .container_header {
+    flex: 0.88;
+    margin: 20px 0;
+
+    .bg_transparent {
+      width: 200px;
+    }
+
+    .button_back {
+      @include button_back();
+
+      font-size: 14px;
+    }
+
+    .container_nav {
+      margin: 22px 0;
+
+      ul {
+        font-size: 20px;
+
+        li {
+          &:first-child {
+            margin-left: 0;
+          }
+
+          a {
+            padding: 20px 0;
+          }
+        }
+      }
+
+      .right_menu {
+        width: 450px;
+        height: 38px;
+
+        .button {
+          height: 100%;
+          font-size: 14px;
+        }
+      }
+      .btn_single {
+        @include button_back();
+
+        min-width: 160px;
+        padding: 8px 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 1124px) {
+  .container_header {
+    flex: 0.88;
+    margin: 20px 0;
+
+    .bg_transparent {
+      width: 200px;
+    }
+
+    .button_back {
+      @include button_back();
+
+      font-size: 12px;
+    }
+
+    .container_nav {
+      margin: 22px 0;
+
+      ul {
+        font-size: 18px;
+
+        li {
+          &:first-child {
+            margin-left: 0;
+          }
+
+          a {
+            padding: 20px 0;
+          }
+        }
+      }
+
+      .right_menu {
+        width: 450px;
+        height: 34px;
+
+        .button {
+          height: 100%;
+          font-size: 12px;
+        }
+      }
+      .btn_single {
+        @include button_back();
+
+        min-width: 160px;
+        padding: 8px 0;
+      }
+    }
+  }
 }
