--- a/src/pages/MLBPowerdfsLive/index.module.scss
+++ b/src/pages/MLBPowerdfsLive/index.module.scss
@@ -224,3 +224,436 @@
     }
   }
 }
+
+@media (max-width: 1900px) {
+  .wrapper {
+    .currentState {
+      font-size: 28px;
+      margin-right: 31px;
+
+      .orb {
+        width: 10px;
+        height: 10px;
+        margin-right: 7px;
+        transform: translateY(-2px);
+      }
+
+      &.column {
+        color: $primary;
+        line-height: 18px;
+        margin-top: 7px;
+      }
+
+      .span_text {
+        font-size: 14px;
+      }
+    }
+
+    .container {
+      padding: 0;
+
+      .container_left_side {
+        flex: 0.74;
+        margin-left: 80px;
+
+        > div {
+          width: 100%;
+        }
+
+        .left_side_footer {
+          margin: 80px 0;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .sidebar_container {
+        > div {
+          width: 410px;
+          padding: 0px 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1680px) {
+  .wrapper {
+    .currentState {
+      font-size: 24px;
+      margin-right: 31px;
+
+      .orb {
+        width: 10px;
+        height: 10px;
+        margin-right: 7px;
+        transform: translateY(-2px);
+      }
+
+      &.column {
+        color: $primary;
+        line-height: 18px;
+        margin-top: 7px;
+      }
+
+      .span_text {
+        font-size: 12px;
+      }
+    }
+
+    .container {
+      padding: 0;
+
+      .container_left_side {
+        flex: 0.72;
+        margin-left: 80px;
+
+        > div {
+          width: 100%;
+        }
+
+        .left_side_footer {
+          margin: 80px 0;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .sidebar_container {
+        > div {
+          width: 380px;
+          padding: 0px 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1440px) {
+  .wrapper {
+    .currentState {
+      font-size: 22px;
+      margin-right: 31px;
+
+      .orb {
+        width: 10px;
+        height: 10px;
+        margin-right: 7px;
+        transform: translateY(-2px);
+      }
+
+      &.column {
+        color: $primary;
+        line-height: 18px;
+        margin-top: 7px;
+      }
+
+      .span_text {
+        font-size: 11px;
+      }
+    }
+
+    .container {
+      padding: 0;
+
+      .container_left_side {
+        flex: 0.7;
+        margin-left: 70px;
+
+        > div {
+          width: 100%;
+        }
+
+        .left_side_footer {
+          margin: 80px 0;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .sidebar_container {
+        > div {
+          width: 360px;
+          padding: 0px 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1366px) {
+  .wrapper {
+    .currentState {
+      font-size: 22px;
+      margin-right: 31px;
+
+      .orb {
+        width: 10px;
+        height: 10px;
+        margin-right: 7px;
+        transform: translateY(-2px);
+      }
+
+      &.column {
+        color: $primary;
+        line-height: 18px;
+        margin-top: 7px;
+      }
+
+      .span_text {
+        font-size: 11px;
+      }
+    }
+
+    .container {
+      padding: 0;
+
+      .container_left_side {
+        flex: 0.68;
+        margin-left: 60px;
+
+        > div {
+          width: 100%;
+        }
+
+        .left_side_footer {
+          margin: 80px 0;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .sidebar_container {
+        > div {
+          width: 340px;
+          padding: 0px 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  .wrapper {
+    .currentState {
+      font-size: 22px;
+      margin-right: 31px;
+
+      .orb {
+        width: 10px;
+        height: 10px;
+        margin-right: 7px;
+        transform: translateY(-2px);
+      }
+
+      &.column {
+        color: $primary;
+        line-height: 18px;
+        margin-top: 7px;
+      }
+
+      .span_text {
+        font-size: 11px;
+      }
+    }
+
+    .container {
+      padding: 0;
+
+      .container_left_side {
+        flex: 0.68;
+        margin-left: 55px;
+
+        > div {
+          width: 100%;
+        }
+
+        .left_side_footer {
+          margin: 80px 0;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .sidebar_container {
+        > div {
+          width: 330px;
+          padding: 0px 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .wrapper {
+    .currentState {
+      font-size: 22px;
+      margin-right: 31px;
+
+      .orb {
+        width: 10px;
+        height: 10px;
+        margin-right: 7px;
+        transform: translateY(-2px);
+      }
+
+      &.column {
+        color: $primary;
+        line-height: 18px;
+        margin-top: 7px;
+      }
+
+      .span_text {
+        font-size: 11px;
+      }
+    }
+
+    .container {
+      padding: 0;
+
+      .container_left_side {
+        flex: 0.68;
+        margin-left: 45px;
+
+        > div {
+          width: 100%;
+        }
+
+        .left_side_footer {
+          margin: 80px 0;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .sidebar_container {
+        > div {
+          width: 320px;
+          padding: 0px 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1124px) {
+  .wrapper {
+    .currentState {
+      font-size: 22px;
+      margin-right: 31px;
+
+      .orb {
+        width: 10px;
+        height: 10px;
+        margin-right: 7px;
+        transform: translateY(-2px);
+      }
+
+      &.column {
+        color: $primary;
+        line-height: 18px;
+        margin-top: 7px;
+      }
+
+      .span_text {
+        font-size: 11px;
+      }
+    }
+
+    .container {
+      padding: 0;
+
+      .container_left_side {
+        flex: 0.7;
+        margin-left: 15px;
+
+        > div {
+          padding: 0;
+          width: 100%;
+        }
+
+        .left_side_footer {
+          margin: 80px 0;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .sidebar_container {
+        > div {
+          width: 310px;
+          padding: 0px 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .wrapper {
+    .currentState {
+      font-size: 22px;
+      margin-right: 31px;
+
+      .orb {
+        width: 10px;
+        height: 10px;
+        margin-right: 7px;
+        transform: translateY(-2px);
+      }
+
+      &.column {
+        color: $primary;
+        line-height: 18px;
+        margin-top: 7px;
+      }
+
+      .span_text {
+        font-size: 11px;
+      }
+    }
+
+    .container {
+      padding: 0;
+
+      .container_left_side {
+        flex: 0.95;
+        margin: 0 auto;
+
+        > div {
+          padding: 0;
+          width: 100%;
+        }
+
+        .left_side_footer {
+          margin: 80px 0;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .sidebar_container {
+        > div {
+          display: none;
+        }
+      }
+    }
+  }
+}
